apollo_check.txt
    Checking olympus v13.0.0 (/home/tdy/Escritorio/rocky)
error[E0428]: the name `Search` is defined multiple times
   --> src/traits/message.rs:152:5
    |
147 |     Search { query: String },
    |     ------ previous definition of the type `Search` here
...
152 |     Search { query: String },
    |     ^^^^^^ `Search` redefined here
    |
    = note: `Search` must be defined only once in the type namespace of this enum

warning: unused import: `watch`
 --> src/actors/zeus/mod.rs:8:44
  |
8 | use tokio::sync::{RwLock, broadcast, mpsc, watch};
  |                                            ^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `Instant`
 --> src/actors/zeus/mod.rs:9:39
  |
9 | use tokio::time::{interval, Duration, Instant};
  |                                       ^^^^^^^

warning: unused import: `debug`
  --> src/actors/zeus/mod.rs:10:34
   |
10 | use tracing::{info, warn, error, debug};
   |                                  ^^^^^

warning: unused import: `SystemStatus`
  --> src/actors/zeus/mod.rs:12:74
   |
12 | use crate::actors::{GodName, DivineDomain, OlympusState, OlympusMetrics, SystemStatus};
   |                                                                          ^^^^^^^^^^^^

warning: unused import: `std::sync::Arc`
 --> src/actors/zeus/thunder.rs:6:5
  |
6 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^

warning: unused import: `HashSet`
 --> src/actors/zeus/supervisor.rs:6:33
  |
6 | use std::collections::{HashMap, HashSet, VecDeque};
  |                                 ^^^^^^^

